# sentiment_analysis_fastapi

./: .gitignore  README.md  pyproject.toml
app/: main.py
tests/: test_sentiment_analysis_fastapi.py
